# azure-iot-edge-devops-sample-c

./: .gitignore  CONTRIBUTING.md  README.md  deployment.debug.template.json  deployment.template.json  edgeSmokeTest.sh
modules/FilterModule/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.amd64.debug  Dockerfile.unittest  filter.c  filter.h  main.c  module.json  tests.c
